--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,11 @@ jobs:
       - name: Run tests
         run: go test -v ./...
 
-      - name: Run linter
-        uses: golangci/golangci-lint-action@v4
-        with:
-          version: latest
-          args: --timeout=5m
+      #- name: Run linter
+      #  uses: golangci/golangci-lint-action@v4
+      #  with:
+      #    version: latest
+      #    args: --timeout=5m
 
   build:
     runs-on: ${{ matrix.os }}
